tests/baselines/reference/mergedModuleDeclarationCodeGen5.errors.txt
mergedModuleDeclarationCodeGen5.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen5.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen5.ts(1,14): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen5.ts(5,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen5.ts(5,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen5.ts(5,14): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergedModuleDeclarationCodeGen5.ts (6 errors) ====
    module M.buz.plop {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                 ~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function doom() { }
        export function M() { }
    }
    module M.buz.plop {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                 ~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function gunk() { }
        function buz() { }
        export class fudge { }
        export enum plop { }
    
        // Emit these references as follows
        var v1 = gunk; // gunk
        var v2 = buz; // buz
        export var v3 = doom; // _plop.doom
        export var v4 = M; // _plop.M
        export var v5 = fudge; // fudge
        export var v6 = plop; // plop
    }